# lan-bet

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs  services.rs
common/: Cargo.toml
common/src/: lib.rs  network.rs
server/: Cargo.toml
server/src/: connection_manager.rs  database.rs  database_manager.rs  main.rs  network.rs  wager_manager.rs
src/: database.rs  lib.rs  network.rs
