[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version = "1.0.202", features = ["derive"] }
anyhow = "1.0.86"
rmp-serde = "1.3.0"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures-util = "0.3.30"
tokio = {version = "1", features = ["full"]}
tokio-tungstenite = "0.23.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
async-channel = "2.3.1"
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = [
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
] }
