[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version = "1.0.202", features = ["derive"] }
anyhow = "1.0.86"
rmp-serde = "1.3.0"
futures = "0.3.30"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures-util = "0.3.30"
tokio = {version = "1", features = ["full"]}
tokio-tungstenite = "0.23.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo = "0.11.0"
